--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,19 @@ a.footer-button-left.ui-btn.ui-corner-all {
 	float: left;
 }
 
+p#logo {
+	text-align: center;
+	display: block;
+}
+
+form#log {
+	display: block;
+	right: 50%;
+	left: 50%;
+	margin-top: 30%;
+}
+
 a.footer-button-right.ui-btn.ui-corner-all {
-	
 	float: right;
 	margin-right: 5px;
 }
